# osu-viewer

./: Cargo.toml  README.md
assets/test/: mania_beatmap.osu
src/: main.rs
